[gd_scene load_steps=11 format=3 uid="uid://dx00oa0dadpvj"]

[ext_resource type="Script" path="res://scripts/player/text_box.gd" id="1_osatr"]
[ext_resource type="AudioStream" uid="uid://dq880ihrwmr8h" path="res://audio/sfx/text_scrolling_mellow_low_note.wav" id="2_evowq"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="2_qnltp"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="3_00gxq"]
[ext_resource type="AudioStream" uid="uid://chstsmx2ao336" path="res://audio/sfx/dialogueskip_wiggle_f.wav" id="3_rcur0"]
[ext_resource type="Texture2D" uid="uid://cmmmjjhb77ud5" path="res://graphics/items/weapons/generic_sword.png" id="4_13uxh"]
[ext_resource type="StyleBox" uid="uid://dq64op7nmd3n2" path="res://themes/text_box_panel.tres" id="4_p0x7t"]
[ext_resource type="AudioStream" uid="uid://dq5lav6yqgxnl" path="res://audio/sfx/dialogueskip_wiggle_c.wav" id="5_4fxfv"]
[ext_resource type="Theme" uid="uid://dgitjg5ag10ai" path="res://themes/dialogue_text_box_button_hbox.tres" id="8_5rr3o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s2p22"]

[node name="TextBoxRoot" type="Node2D" node_paths=PackedStringArray("buttonRow")]
script = ExtResource("1_osatr")
textScrollSfx = ExtResource("2_evowq")
advanceDialogueSfx = Array[AudioStream]([ExtResource("5_4fxfv"), ExtResource("3_rcur0")])
buttonRow = NodePath("Panel/HBoxContainer")

[node name="Panel" type="Panel" parent="."]
offset_left = -650.0
offset_top = 80.0
offset_right = 650.0
offset_bottom = 480.0
mouse_filter = 2
theme = ExtResource("2_qnltp")
theme_override_styles/panel = ExtResource("4_p0x7t")

[node name="TextContainer" type="PanelContainer" parent="Panel"]
layout_mode = 0
offset_right = 1300.0
offset_bottom = 400.0
mouse_filter = 1
theme = ExtResource("2_qnltp")
theme_override_styles/panel = SubResource("StyleBoxEmpty_s2p22")

[node name="MarginContainer" type="MarginContainer" parent="Panel/TextContainer"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TextContainer/MarginContainer"]
layout_mode = 2

[node name="SpeakerText" type="RichTextLabel" parent="Panel/TextContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_00gxq")
theme_override_font_sizes/normal_font_size = 44
theme_override_font_sizes/bold_font_size = 44
theme_override_font_sizes/italics_font_size = 44
theme_override_font_sizes/bold_italics_font_size = 44
theme_override_font_sizes/mono_font_size = 44
bbcode_enabled = true
text = "Speaker:"
fit_content = true

[node name="TextBoxText" type="RichTextLabel" parent="Panel/TextContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 270)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("3_00gxq")
theme_override_font_sizes/normal_font_size = 28
theme_override_font_sizes/bold_font_size = 28
theme_override_font_sizes/italics_font_size = 28
theme_override_font_sizes/bold_italics_font_size = 28
theme_override_font_sizes/mono_font_size = 28
bbcode_enabled = true
text = "Some line of dialogue..."
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -650.0
offset_top = -57.0
offset_right = 650.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource("8_5rr3o")
theme_override_constants/separation = 12
alignment = 1

[node name="ReadySprite" type="Sprite2D" parent="."]
position = Vector2(610, 110)
scale = Vector2(2, 2)
texture = ExtResource("4_13uxh")
